# Lumen

./: .gitignore  README.md  main.py  pyproject.toml
backend/backend/: settings.py  urls.py
backend/chatbot/: gemini_response.py  models.py  response_generator.py  urls.py  views.py  web_search_test.py
backend/chatbot/migrations/: 0001_initial.py
backend/userauth/: models.py  urls.py
backend/userauth/migrations/: 0001_initial.py
frontend/: pubspec.yaml
frontend/android/app/src/main/: AndroidManifest.xml
frontend/ios/Runner/: Info.plist
frontend/lib/: main.dart
frontend/lib/screens/: notifications.dart
frontend/lib/screens/scan/: scanpage.dart
frontend/lib/screens/scan/input/: inputimage.dart  inputtext.dart  inputtext_withinput.dart
frontend/lib/screens/scan/result/: result.dart  resulttext.dart
frontend/lib/services/: api.dart
