[project]
name = "lumen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-rest-auth>=7.0.1",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "djangorestframework-simplejwt>=5.5.0",
    "google-genai>=1.22.0",
    "google-search-results>=2.4.2",
    "openai>=1.86.0",
    "psycopg2-binary>=2.9.10",
    "serpapi>=0.1.5",
]
